--- a/ecommerce/ecommerceapp/static/assets/css/style.css
+++ b/ecommerce/ecommerceapp/static/assets/css/style.css
@@ -39,7 +39,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #accffe; }
+  background: #ac7ad1 }
 
 .inner {
   position: relative;
