--- a/ecommerce/ecommerceapp/templates/index.html
+++ b/ecommerce/ecommerceapp/templates/index.html
@@ -513,7 +513,7 @@
 				<div class="col-lg-3 col-md-8 col-sm-12">
 					<div class="footer-widget about-widget">
 						<img src="{% static 'img/clulez_footer.png' %}" class="footer-logo" alt="">
-						<p>Donec vitae purus nunc. Morbi faucibus erat sit amet congue mattis. Nullam fringilla faucibus urna, id dapibus erat iaculis ut. Integer ac sem.</p>
+						<p>Luxury Collection of Mens, Womens & Kids Fashion Wear - Explore luxury clothes, bags, accessories & shoes from premium brands at The Collective. Easy 15 Days Return Policy.</p>
 						<div class="cards">
 							<img src="{% static 'img/cards/5.png' %}" alt="">
 							<img src="{% static 'img/cards/4.png' %}" alt="">
