--- a/ecommerce/ecommerceapp/templates/login.html
+++ b/ecommerce/ecommerceapp/templates/login.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="{% static 'usr/css/style.css' %}">
 
 	</head>
-	<body class="img js-fullheight" style="background-image: url({% static 'usr/images/cropaweed.webp' %});">
+	<body class="img js-fullheight" style="background-image: url({% static 'img/background_2.jpeg' %});">
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
